--- a/package.json
+++ b/package.json
@@ -1,52 +1,53 @@
 {
-	"name": "filltheholedotca",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint --config eslint.config.js src/",
-		"lint:a11y": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --threshold warning",
-		"test": "playwright test",
-		"test:a11y": "playwright test tests/a11y"
-	},
-	"devDependencies": {
-		"@axe-core/playwright": "^4.11.1",
-		"@playwright/test": "^1.58.2",
-		"@sveltejs/adapter-auto": "^7.0.0",
-		"@sveltejs/adapter-vercel": "^6.3.2",
-		"@sveltejs/kit": "^2.50.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.4",
-		"@tailwindcss/vite": "^4.2.0",
-		"autoprefixer": "^10.4.24",
-		"eslint": "^9.26.0",
-		"eslint-plugin-svelte": "^3.9.0",
-		"svelte": "^5.51.0",
-		"svelte-check": "^4.3.6",
-		"tailwindcss": "^4.2.0",
-		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.56.0",
-		"vite": "^7.3.1"
-	},
-	"dependencies": {
-		"@supabase/supabase-js": "^2.97.0",
-		"@types/leaflet": "^1.9.21",
-		"@types/leaflet.markercluster": "^1.5.6",
-		"date-fns": "^4.1.0",
-		"leaflet": "^1.9.4",
-		"leaflet.markercluster": "^1.5.3",
-		"svelte-sonner": "^1.0.7",
-		"sveltekit-superforms": "^2.30.0",
-		"tailwind-merge": "^3.5.0",
-		"zod": "^4.3.6"
-	},
-	"overrides": {
-		"cookie": "^0.7.0",
-		"minimatch": "^10.2.1"
-	}
+  "name": "filltheholedotca",
+  "private": true,
+  "version": "0.0.1",
+  "license": "AGPL-3.0-or-later",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "eslint --config eslint.config.js src/",
+    "lint:a11y": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --threshold warning",
+    "test": "playwright test",
+    "test:a11y": "playwright test tests/a11y"
+  },
+  "devDependencies": {
+    "@axe-core/playwright": "^4.11.1",
+    "@playwright/test": "^1.58.2",
+    "@sveltejs/adapter-auto": "^7.0.0",
+    "@sveltejs/adapter-vercel": "^6.3.2",
+    "@sveltejs/kit": "^2.50.2",
+    "@sveltejs/vite-plugin-svelte": "^6.2.4",
+    "@tailwindcss/vite": "^4.2.0",
+    "autoprefixer": "^10.4.24",
+    "eslint": "^9.26.0",
+    "eslint-plugin-svelte": "^3.9.0",
+    "svelte": "^5.51.0",
+    "svelte-check": "^4.3.6",
+    "tailwindcss": "^4.2.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0",
+    "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
+    "@types/leaflet": "^1.9.21",
+    "@types/leaflet.markercluster": "^1.5.6",
+    "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
+    "svelte-sonner": "^1.0.7",
+    "sveltekit-superforms": "^2.30.0",
+    "tailwind-merge": "^3.5.0",
+    "zod": "^4.3.6"
+  },
+  "overrides": {
+    "cookie": "^0.7.0",
+    "minimatch": "^10.2.1"
+  }
 }
