--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@axe-core/playwright": "^4.11.1",
     "@playwright/test": "^1.58.2",
     "@sveltejs/adapter-auto": "^7.0.0",
-    "@sveltejs/adapter-vercel": "^6.3.2",
+    "@sveltejs/adapter-netlify": "^6.0.3",
     "@sveltejs/kit": "^2.50.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@tailwindcss/vite": "^4.2.0",
