security: harden APIs, normalize legacy data, and remove OG CDN dependency

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ SUPABASE_SERVICE_ROLE_KEY=placeholder_service_role_key
 ADMIN_SECRET=placeholder_admin_secret
 SIGHTENGINE_API_USER=placeholder_sightengine_user
 SIGHTENGINE_API_SECRET=placeholder_sightengine_secret
+# Random secret used to HMAC-SHA-256 IP addresses before storage.
+# Generate with: openssl rand -hex 32
+# Changing this invalidates all existing ip_hash deduplication records.
+IP_HASH_SECRET=placeholder_ip_hash_secret
